Updates courseProject.bib, continues works on proposal

--- a/tex/proposal-template/courseProject.bib
+++ b/tex/proposal-template/courseProject.bib
@@ -470,3 +470,11 @@ year = {2011}
 	pages={676--684},
 	year={2016}
 }
+@inproceedings{li2014scaling,
+  title={Scaling Distributed Machine Learning with the Parameter Server.},
+  author={Li, Mu and Andersen, David G and Park, Jun Woo and Smola, Alexander J and Ahmed, Amr and Josifovski, Vanja and Long, James and Shekita, Eugene J and Su, Bor-Yiing},
+  booktitle={OSDI},
+  volume={14},
+  pages={583--598},
+  year={2014}
+}
