--- a/tex/proposal-template/proposal-template.tex
+++ b/tex/proposal-template/proposal-template.tex
@@ -292,14 +292,16 @@ distributed manner. It constitutes a huge gap between theory and practice, since
 nowadays the size of data increases at a rapid speed, which makes one-core
 processor very difficult to handle it properly.
 
-We will build off of work from [CITE YANG 1 \& 2], incorporating work from [CITE
-LI PS]. In [CITE YANG], SDCA is implemented in a distributed, syncrhonized
-fashion. While the achieved results were quite promising, they did not take
-advantage of hardware acceleration or asynchronous communication. [CITE LI PS]
-builds an asynchronous communication framework using the concept of parameter
-servers, which are central data stores for model parameters, and distributed
-workers working in an asynchronous fashion (i.e., communication and parameter
-updates are non-blocking operations).
+We will build off of work from\cite{yang2013trading}, incorporating work
+from\cite{li2014scaling}. In\cite{yang2013trading}, SDCA is implemented in a
+distributed, synchronized fashion. While the achieved results were quite
+promising, they did not take advantage of hardware acceleration or asynchronous
+communication.  \cite{li2014scaling} builds an asynchronous communication
+framework using the concept of parameter servers, which are central data stores
+for model parameters, and distributed workers working in an asynchronous fashion
+(i.e., communication and parameter updates are non-blocking operations). By
+combining the work of\cite{yang2013trading}\cite{li2014scaling}, we hope to
+develop a robust, distributed SDCA solution.
 
 \section{The Proposed Work}
 We will approach this problem from both theoreticl and implementation
@@ -324,7 +326,7 @@ In addition to using GPUs for math operations, we will distribute the workload
 over a cluster of computers. Each comptuer will work on a small subproblem used
 in the parameter update and send this result to a parameter server, which will
 handle parameter updates and synchronoization across workers. The architecture
-used will be similar to that of [CITE PS], using a central parameter server that
+used will be similar to that of\cite{li2014scaling}, using a central parameter server that
 communicates asynchronously with distributed workers. This asyncrhonous
 communication framework will be built using MPI and C++ threading facilities.
 
