finishes proposal changes

--- a/tex/proposal-template/courseProject.bib
+++ b/tex/proposal-template/courseProject.bib
@@ -515,3 +515,10 @@ year = {2011}
 	year={1976},
 	publisher={Elsevier}
 }
+@inproceedings{lian2015asynchronous,
+  title={Asynchronous parallel stochastic gradient for nonconvex optimization},
+  author={Lian, Xiangru and Huang, Yijun and Li, Yuncheng and Liu, Ji},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2737--2745},
+  year={2015}
+}
