--- a/tex/proposal-template/proposal-template.tex
+++ b/tex/proposal-template/proposal-template.tex
@@ -415,8 +415,8 @@ are considering two data sets -- the \textit{Common Crawl} corpus, which is
 hosted on AWS and consists of a month's worth of web crawling across two billion
 web pages, or possibly the YouTube 8M dataset, which contains frame-level
 features and is roughly 1.7TB in size (which is still small enough to fit on a
-single machine). At this point we do not feel comfortable specifying the dataset
-for the asynchronous communication tests with any certainty.
+single machine). However, at this point the datasets
+for the asynchronous communication tests cannot be specified with any certainty.
 
 
 %\subsubsection*{Acknowledgments}
