Changes color theme of presentation. Adds makefile for generating pdf as well as  a README

--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usetheme{metropolis}
+\usecolortheme{seagull}
 
 \title{Efficient Distributed SDCA}
 \author{Jeff Hajewski and Mingrui Liu}
