--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 \usetheme{metropolis}
-\usecolortheme{seagull}
+\usecolortheme{dove}
 
 \title{Efficient Distributed SDCA}
 \author{Jeff Hajewski and Mingrui Liu}
